[gd_scene load_steps=3 format=2]

[ext_resource path="res://onlinescores.gd" type="Script" id=1]
[ext_resource path="res://interface/fonts/kenvector_future_32.tres" type="DynamicFont" id=2]

[node name="onlinescores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.4757
margin_top = -2.11893
margin_right = -12.4757
margin_bottom = -2.1189
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="."]
margin_left = 332.299
margin_top = 45.7165
margin_right = 674.299
margin_bottom = 122.716
custom_fonts/font = ExtResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "online leaderboard
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leaderboard" type="Label" parent="."]
margin_left = 208.0
margin_top = 180.0
margin_right = 831.0
margin_bottom = 438.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "downloading scores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button2" type="Button" parent="."]
margin_left = 764.923
margin_top = 471.063
margin_right = 972.923
margin_bottom = 543.063
custom_fonts/font = ExtResource( 2 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="."]
margin_left = -779.864
margin_top = 164.75
margin_right = -542.864
margin_bottom = 235.75

[node name="http_request" type="HTTPRequest" parent="."]

[node name="button" type="Button" parent="."]
margin_left = 763.0
margin_top = 217.0
margin_right = 981.0
margin_bottom = 293.0
custom_fonts/font = ExtResource( 2 )
text = "UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button3" type="Button" parent="."]
margin_left = 766.0
margin_top = 298.0
margin_right = 980.0
margin_bottom = 380.0
custom_fonts/font = ExtResource( 2 )
text = "down"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="button2" to="." method="_on_button2_pressed"]
[connection signal="request_completed" from="http_request" to="." method="_on_http_request_request_completed"]
[connection signal="button_down" from="button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="button3" to="." method="_on_button3_button_down"]
